<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2e3237"
    tools:context="cafe.despiwich.com.despiwich.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#fff"
            android:text="@string/bello_hoomans"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:hint="@string/hint_email"
                android:textColor="#fff"
                android:textColorHint="#51565b"
                android:background="#3b4148"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:hint="@string/hint_password"
                android:textColor="#fff"
                android:textColorHint="#51565b"
                android:background="#3b4148"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:textColor="#fff"
                    android:background="#ea4c88"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_toRightOf="@id/loginButton"
                    android:layout_marginLeft="30dp"
                    android:layout_width="160dp"
                    android:layout_height="50dp"

                    android:textColor="#fff"
                    android:background="#3b4148"
                    android:text="@string/signup"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#fff"
                android:text="@string/or_sign_in_using"
                android:visibility="invisible"
                android:layout_marginBottom="20dp"/>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:visibility="invisible"
                android:layout_height="50dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>